@@ -11,4 +11,12 @@ __GLUE := function( T ) // returns the 'domain' and the 'codomain'.
   end if;
 end function;
 
-declare verbose Multilinear, 1;
+/*
+  Verbose names
+*/
+declare verbose Multilinear, 1; // turns verbose on for all functions below
+
+declare verbose Centroid, 1;
+declare verbose DerivationAlgebra, 1;
+declare verbose DerivationClosure, 1;
+declare verbose Nucleus, 1;
